Fixed issue with image overflowing and reduce size on mobile device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,6 +221,10 @@ a.card-title {
   margin-top: 7px!important;
 }
 
+.margin-top-14 {
+  margin-top: 14px!important;
+}
+
 .back-arrow {
   color: #8dbf7f;
 
